--- a/components/jasper-reports/src/main/resources/reports/IntegrantesRpts.jrxml
+++ b/components/jasper-reports/src/main/resources/reports/IntegrantesRpts.jrxml
@@ -8,6 +8,12 @@
 		<![CDATA[]]>
 	</queryString>
 	<field name="nome" class="java.lang.String"/>
+	<field name="github" class="java.lang.String">
+		<fieldDescription><![CDATA[github]]></fieldDescription>
+	</field>
+	<field name="linkedin" class="java.lang.String">
+		<fieldDescription><![CDATA[linkedin]]></fieldDescription>
+	</field>
 	<background>
 		<band splitType="Stretch"/>
 	</background>
@@ -15,7 +21,7 @@
 		<band height="79" splitType="Stretch"/>
 	</title>
 	<pageHeader>
-		<band height="96" splitType="Stretch">
+		<band height="111" splitType="Stretch">
 			<textField>
 				<reportElement x="0" y="0" width="327" height="30" uuid="f38c206b-f38a-43ad-ba46-7e6e04c15adb"/>
 				<textFieldExpression><![CDATA[$P{NOME_FANTASIA}]]></textFieldExpression>
@@ -28,18 +34,37 @@
 				<reportElement x="0" y="60" width="327" height="30" uuid="f3966f8b-0cb4-4d06-81e5-6700023d0f12"/>
 				<textFieldExpression><![CDATA[$P{TELEFONE}]]></textFieldExpression>
 			</textField>
+			<staticText>
+				<reportElement x="0" y="90" width="50" height="20" uuid="7e71f484-1495-49e6-a70c-b7d50b5bef2d"/>
+				<textElement textAlignment="Left"/>
+				<text><![CDATA[Nome]]></text>
+			</staticText>
+			<staticText>
+				<reportElement x="240" y="90" width="50" height="20" uuid="01c3a13a-0366-442f-abbe-cd5d9323acc2"/>
+				<textElement textAlignment="Left"/>
+				<text><![CDATA[Github]]></text>
+			</staticText>
+			<staticText>
+				<reportElement x="380" y="90" width="50" height="20" uuid="a36e0135-5114-471b-bcb5-b45b31526200"/>
+				<textElement textAlignment="Left"/>
+				<text><![CDATA[Linkedin]]></text>
+			</staticText>
 		</band>
 	</pageHeader>
 	<detail>
-		<band height="125" splitType="Stretch">
+		<band height="24" splitType="Stretch">
 			<textField>
-				<reportElement x="27" y="20" width="413" height="30" uuid="5f270904-1e84-40a8-9cf8-fddce2890ab8"/>
+				<reportElement x="0" y="0" width="240" height="20" uuid="5f270904-1e84-40a8-9cf8-fddce2890ab8"/>
 				<textFieldExpression><![CDATA[$F{nome}]]></textFieldExpression>
 			</textField>
-			<staticText>
-				<reportElement x="-73" y="20" width="100" height="30" uuid="8b411a71-f357-4c50-be31-e607002ec4ee"/>
-				<text><![CDATA[nome]]></text>
-			</staticText>
+			<textField>
+				<reportElement x="240" y="0" width="240" height="20" uuid="249b5ab5-13f2-4b3c-a96b-a3e145e5025e"/>
+				<textFieldExpression><![CDATA[$F{github}]]></textFieldExpression>
+			</textField>
+			<textField>
+				<reportElement x="380" y="0" width="150" height="20" uuid="d73ecf77-f394-4468-b537-ba020df6ddc5"/>
+				<textFieldExpression><![CDATA[$F{linkedin}]]></textFieldExpression>
+			</textField>
 		</band>
 	</detail>
 	<pageFooter>
